# PolyPESTO

./: .gitignore  CLAUDE.md  README.md  crp_test.py  pyproject.toml  test.py  verify_patches.py
.devcontainer/: devcontainer.json
docker/: Dockerfile
docker/patches/: petab_import_changes.patch  pypesto_import_changes.patch  sampling_bounds.patch  sbml_import_changes.patch
experiments/CRP2_CPE/: fit.py  params.json  problem.py  setup.py
experiments/LV/: params.json  setup.py
experiments/equilibrium/: problem.py  setup.py
experiments/experimental_cpe/: create_petab.py  single_rxn.py
experiments/irreversible_cpe/: double_rxn.py  pe_test.py  plot_ensemble.ipynb  pt_020_x_100_noise_00.py  pt_020_x_100_noise_02.py  pt_100_x_020_noise_00.py  pt_100_x_040_noise_00.py  pt_100_x_060_noise_00.py  pt_100_x_080_noise_00.py  pt_100_x_100_noise_00.py  pt_100_x_100_noise_02.py  pt_100_x_100_noise_04.py  run_scripts.sh  single_rxn.py  util.py  vis.py
experiments/reversible_cpe/: single_rxn.py  util.py
polypesto/: __init__.py  _patches.py  use.py
polypesto/analysis/: __init__.py  comparison.py
polypesto/core/: __init__.py  conditions.py  cparams.py  experiment.py  experiments.py  params.py  petab.py  pypesto.py  results.py  simulate.py  study.py
polypesto/examples/: irreversible_cpe.ipynb  irreversible_cpe.py  lv_test.py  rev_test.py  study_test.py  test.py  test_lv.ipynb
polypesto/models/: __init__.py  base.py  cpe.py  model.py  robertson.py  sbml.py  sbml_util.py
polypesto/notebooks/: analysis copy.ipynb  crp_test.ipynb  equilibrium_test.ipynb  integration_test.ipynb  irreversible_test.ipynb  plot_test.ipynb
polypesto/utils/: __init__.py  _patches.py  file.py  logging.py  patches.py  paths.py  plot.py  process.py  sbml.py
polypesto/visualization/: __init__.py  _compare.py  base.py  compare.py  measurements.py  optimize.py  plots.py  predict.py  profile.py  results.py  sample.py  study.py  true.py
src/: compare_cpe.ipynb  crp_test.ipynb  define_petab.ipynb  equilibrium_test.ipynb  plot_test.ipynb  pypesto_test.ipynb  robertson_test.ipynb
src/_petab/: CRP2_CPE.py  LV.py  equilibrium.py  problem.py
src/models/: amici.py  cpe.py  cpe_models.py  model.py  sbml.py  sbml_models.py
tests/: conftest.py
(+94 files in other folders)
