[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polypesto"
version = "0.1.0"
description = "PolyPESTO: parameter estimation utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]

# core deps (mirrors your dockerfile, minus system packages)
dependencies = [
  "pypesto[amici,petab,fides]",
  "python-libsbml>=5.17.0",
  "h5py",
  "SBMLDiagrams",
  "plotly",
  "pyswarm",
  "streamlit",
  "cmake",
  "matplotlib",
  "seaborn",
  "jupyter",
  "ipykernel",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["polypesto*"]