[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polypesto"
version = "0.1.0"
description = "PolyPESTO: Polymerization parameter estimation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name"}]

dependencies = [
  "pypesto[amici,petab,fides]",
  "python-libsbml>=5.17.0",
  "h5py",
  "SBMLDiagrams",
  "plotly",
  "pyswarm",
  "streamlit",
  "cmake",
  "matplotlib",
  "seaborn",
  "jupyter",
  "ipykernel",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["polypesto*"]